[gd_scene load_steps=24 format=3 uid="uid://q2eyupn7k7l2"]

[ext_resource type="Script" path="res://Code/FrogLogic/FrogTypes/basic_frog.gd" id="1_rxiyf"]
[ext_resource type="Script" path="res://Code/FrogLogic/frogAI.gd" id="2_vs8rj"]
[ext_resource type="Script" path="res://Code/FrogLogic/FrogStates/FrogSwim.gd" id="3_vmf1d"]
[ext_resource type="PackedScene" uid="uid://cllbpv27v30g8" path="res://Scenes/Frogs/frog_slot.tscn" id="3_xwux3"]
[ext_resource type="Script" path="res://Code/FrogLogic/FrogStates/FrogJump.gd" id="4_2ejmw"]
[ext_resource type="Script" path="res://Code/FrogLogic/FrogStates/FrogHold.gd" id="5_wsoji"]
[ext_resource type="Script" path="res://Code/FrogLogic/FrogStates/FrogFall.gd" id="6_gh8vj"]
[ext_resource type="Script" path="res://Code/FrogLogic/FrogStates/FrogStacked.gd" id="7_avrs0"]
[ext_resource type="Texture2D" uid="uid://c4554dc54ppgk" path="res://Assets/Art/Frogs/blink/05_plink.png" id="8_57het"]
[ext_resource type="Script" path="res://Code/FrogLogic/FrogStates/FrogCharge.gd" id="8_fnlby"]
[ext_resource type="AudioStream" uid="uid://dl3k252o30usk" path="res://Scenes/Frogs/FrogTypes/bouncecharge_final-7db.wav" id="9_0ryux"]
[ext_resource type="Texture2D" uid="uid://gnxwxsklcb51" path="res://Assets/Art/Frogs/resting/05_rest.png" id="9_halpc"]
[ext_resource type="Texture2D" uid="uid://cb6l32dbmeq54" path="res://Assets/Art/Frogs/charging/05_charge.png" id="10_lrc50"]
[ext_resource type="Texture2D" uid="uid://bo12hoarwwc2e" path="res://Assets/Art/Frogs/jumping_turned/05_jump_turned.png" id="11_ha1ty"]
[ext_resource type="Script" path="res://Code/FrogLogic/frog_sprite_handler.gd" id="12_jl4ke"]
[ext_resource type="Texture2D" uid="uid://dfk2rccte3itm" path="res://Assets/Art/Frogs/Ribbit/05_ribbit1.png" id="13_kwrgc"]
[ext_resource type="Texture2D" uid="uid://bbuea6wkj0onf" path="res://Assets/Art/Frogs/Ribbit/05_ribbit2.png" id="14_ecj08"]
[ext_resource type="Texture2D" uid="uid://v0idyxpvk130" path="res://Assets/Visuals/bubble_test1.png" id="17_s3mqq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kpbkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_57het")
}, {
"duration": 1.0,
"texture": ExtResource("9_halpc")
}],
"loop": false,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_lrc50")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_halpc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ha1ty")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_kwrgc")
}, {
"duration": 1.0,
"texture": ExtResource("14_ecj08")
}, {
"duration": 1.0,
"texture": ExtResource("14_ecj08")
}, {
"duration": 1.0,
"texture": ExtResource("13_kwrgc")
}, {
"duration": 1.0,
"texture": ExtResource("9_halpc")
}],
"loop": false,
"name": &"ribbit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jepvn"]
size = Vector2(323, 103)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skv3v"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_alyrt"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8nikg"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 3, 3)
emission_shape = 1
emission_sphere_radius = 128.0
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(0, -1, 0)
initial_velocity_min = 75.26
initial_velocity_max = 155.9
gravity = Vector3(0, 350, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
scale_min = 0.05
scale_max = 0.3
color = Color(0.886275, 0.886275, 0.901961, 0.466667)
hue_variation_min = -0.05
hue_variation_max = 0.04
turbulence_enabled = true
turbulence_noise_strength = 0.79
turbulence_noise_scale = 7.235
turbulence_noise_speed_random = 0.79

[node name="BasicFrog" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_rxiyf")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vs8rj")
initial_state = NodePath("FrogFall")

[node name="FrogSwim" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("frog")]
script = ExtResource("3_vmf1d")
frog = NodePath("../..")

[node name="FrogJump" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("frog")]
script = ExtResource("4_2ejmw")
frog = NodePath("../..")

[node name="FrogHold" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("frog")]
script = ExtResource("5_wsoji")
frog = NodePath("../..")

[node name="FrogFall" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("frog")]
script = ExtResource("6_gh8vj")
frog = NodePath("../..")

[node name="FrogStacked" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("frog")]
script = ExtResource("7_avrs0")
frog = NodePath("../..")

[node name="FrogCharge" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("frog")]
script = ExtResource("8_fnlby")
frog = NodePath("../..")

[node name="JumpChargePlayer" type="AudioStreamPlayer2D" parent="StateMachine/FrogCharge"]
stream = ExtResource("9_0ryux")
volume_db = 13.867
max_polyphony = 4
panning_strength = 2.2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(3, -2)
scale = Vector2(-0.15, 0.2)
sprite_frames = SubResource("SpriteFrames_kpbkf")
animation = &"idle"
offset = Vector2(0, -150)

[node name="FrogSpriteHandler" type="Area2D" parent="." node_paths=PackedStringArray("sprt")]
script = ExtResource("12_jl4ke")
rest_sprite_position = Vector2(3, -2)
rest_sprite_scale = Vector2(-0.15, 0.2)
rest_click_rect = Vector2(323, 103)
jump_sprite_position = Vector2(3, 24)
jump_sprite_scale = Vector2(0.17, 0.17)
jump_click_rect = Vector2(323, 103)
sprt = NodePath("../AnimatedSprite2D")

[node name="ClickableArea" type="CollisionShape2D" parent="FrogSpriteHandler"]
position = Vector2(0.999998, -4)
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_jepvn")

[node name="SlotOnHead" parent="." instance=ExtResource("3_xwux3")]
position = Vector2(0, -35)
active = false
type = 1

[node name="FrogBase" type="Node2D" parent="."]
position = Vector2(0, 29)

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(9, 3)
shape = SubResource("RectangleShape2D_skv3v")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(6, 6)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_alyrt")
amount = 20
amount_ratio = 0.7118
process_material = SubResource("ParticleProcessMaterial_8nikg")
texture = ExtResource("17_s3mqq")
speed_scale = 0.7
explosiveness = 0.14
randomness = 0.48
trail_lifetime = 1.7

[connection signal="input_event" from="." to="." method="_on_area_2d_input_event"]
[connection signal="body_entered" from="FrogSpriteHandler" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="FrogSpriteHandler" to="." method="_on_area_2d_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
